# moso-data-ops-poc

./: .gitignore  README.md
common-utils/: README.md  pyproject.toml
common-utils/src/common/databases/: snowflake_utils.py
common-utils/src/common/deployment/: __init__.py
data-flows/: .env.local  justfile  prefect.test.yaml  prefect.yaml  pyproject.toml
data-flows/.docker/base/: Dockerfile
data-flows/src/: query.py  query_analysis.py
