[tool.poetry]
name = "common-utils"
version = "0.1.0"
description = ""
authors = ["Braun <breyes@mozilla.com>"]
readme = "README.md"
packages = [{include = "common", from = 'src'}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
prefect-snowflake = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
