[tool.poetry]
name = "data-flows"
version = "0.1.0"
description = ""
authors = ["Braun <breyes@mozilla.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
prefect-docker = "^0.3.11"
prefect = "2.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
